--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -8,6 +8,7 @@
 </head>
 <body>
     <%- include('./partials/scripts.ejs') %>
+    <%- include('./partials/nav.ejs') %>
     <h1>hey this is HomePage</h1>
 
 </body>
