--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-dark text-warning">
+<nav class="navbar navbar-expand-lg bg-dark text-light fs-3">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">Blogify</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
