--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -8,7 +8,7 @@
 </head>
 <body>
     <%- include('./partials/nav.ejs') %>
-    <div class="container">
+    <div class="container mt-4">
         <form>
             <div class="mb-3">
               <label for="exampleInputEmail1" class="form-label">Email address</label>
