--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -9,19 +9,18 @@
 <body>
     <%- include('./partials/nav.ejs') %>
     <div class="container mt-4">
-        <form>
+        <form action="/user/signup" method="post">
+          <div class="mb-3">
+            <label for="fullname" class="form-label">FullName</label>
+            <input type="text" name="fullname" class="form-control" id="fullnanme" aria-describedby="fullname">
+          </div>
             <div class="mb-3">
-              <label for="exampleInputEmail1" class="form-label">Email address</label>
-              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-              <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+              <label for="email" class="form-label">Email address</label>
+              <input type="email" name="email" class="form-control" id="email" aria-describedby="email">
             </div>
             <div class="mb-3">
-              <label for="exampleInputPassword1" class="form-label">Password</label>
-              <input type="password" class="form-control" id="exampleInputPassword1">
-            </div>
-            <div class="mb-3 form-check">
-              <input type="checkbox" class="form-check-input" id="exampleCheck1">
-              <label class="form-check-label" for="exampleCheck1">Check me out</label>
+              <label for="password" class="form-label">Password</label>
+              <input type="password" name="password" class="form-control" id="password">
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
           </form> 
