added urlencoded in index.js file

--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -12,7 +12,7 @@
         <form action="/user/signup" method="post">
           <div class="mb-3">
             <label for="fullname" class="form-label">FullName</label>
-            <input type="text" name="fullname" class="form-control" id="fullnanme" aria-describedby="fullname">
+            <input type="text" name="fullname" class="form-control" id="fullname" aria-describedby="fullname">
           </div>
             <div class="mb-3">
               <label for="email" class="form-label">Email address</label>
