--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,18 +1,19 @@
-<nav class="navbar navbar-expand-lg bg-dark text-light fs-3">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">Blogify</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavDropdown">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
-          </li>
+<nav class="navbar navbar-expand-lg bg-info text-info fs-4">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">Blogify</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Home</a>
+        </li>
+
+        <% if (locals.user) { %>
           <li class="nav-item">
             <a class="nav-link" href="#">Add-Blog</a>
           </li>
-          
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Ketan Shinde
@@ -23,7 +24,16 @@
               <li><a class="dropdown-item" href="#">Something else here</a></li>
             </ul>
           </li>
-        </ul>
-      </div>
+        <% } else { %>
+          <li class="nav-item">
+            <a class="nav-link" href="/user/signup">Create-Account</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/user/signin">SignIn</a>
+          </li>
+        <% } %>
+    
+      </ul>
     </div>
-  </nav>
+  </div>
+</nav>
