an LogOut tab is created

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -19,9 +19,7 @@
               Ketan Shinde
             </a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">LogOut</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
+              <li><a class="dropdown-item" href="/user/logOut">LogOut</a></li>
             </ul>
           </li>
         <% } else { %>
