--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -12,8 +12,9 @@
 
         <% if (locals.user) { %>
           <li class="nav-item">
-            <a class="nav-link" href="#">Add-Blog</a>
+            <a class="nav-link" href="/blog/Addnew">Add-Blog</a>
           </li>
+
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Ketan Shinde
