--- a/views/addblog.ejs
+++ b/views/addblog.ejs
@@ -11,7 +11,7 @@
 
 
     <div class="container mt-3">
-        <form action="/blog" method="post">
+        <form action="/blog" method="post" enctype="multipart/form-data">
             <div class="mb-3">
                 <label for="coverImage" class="form-label"> Cover Image </label>
                 <input type="file" class="form-control" id="coverImage" aria-describedby="coverImage" name="coverImage">
