--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -8,6 +8,21 @@
 </head>
 <body>
     <%- include('./partials/scripts.ejs') %>
+   
+    <div class="container mt-3">
+        <% blogs.forEach(blog => { %>
+            <div class="card" style="width: 18rem;">
+                <!-- Ensure the correct field name -->
+                <img src="<%= blog.coverImgUrl %>" class="card-img-top" alt="Blog Image">
+                <div class="card-body">
+                    <h5 class="card-title"><%= blog.title %></h5>
+                    <a href="/blog/<%= blog._id %>" class="btn btn-primary">View</a>
+                </div>
+            </div>
+        <% }) %>
+    </div>
+    
+
     <%- include('./partials/nav.ejs') %>
 
 </body>
