--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -7,12 +7,12 @@
     <%- include('./partials/head.ejs') %>
 </head>
 <body>
-    <%- include('./partials/nav.ejs') %>
+    
 
-    <div class="container mt-4">
+    <div class="container mt-4 mb-4">
         <h1><%= blog.title %></h1>
         <img src="<%= blog.coverImgUrl %>" alt="Blog Image" width="200px">
-        <p><%= blog.body %></p>
+        <pre><%= blog.body %></pre>
     </div>
 
     <%- include('./partials/scripts.ejs') %>
