--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -21,15 +21,24 @@
     </div>
 
     <div class="container mt-3">
-        <h1>Comments</h1>
+        <h1>Comments(<%= comments.length %>)</h1>
         <% if (locals.user) { %>
             <form action="/blog/comment/<%=blog._id %>" method="post">
                 <div class="mb-3">
                   <input type="text" name="content" class="form-control" placeholder="Enter Your Comments!!">
                   <button class="btn btn-sm btn-info mt-2">SubmitComment</button>
                 </div>
-            </form> 
+            </form>               
         <% } %>
+        <div class="mt-3">
+            <% comments.forEach(comment => { %>
+              <div>
+                <img src="<%= comment.createdBy.profileImageUrl %>" alt="" width="50px">
+                <p><%= comment.createdBy.fullname %></p>
+                <pre><%= comment.content %></pre>
+              </div>
+            <% }) %>
+        </div>
     </div>
 
 
